use toxicity for eooh hs label

--- a/data_utils.ipynb
+++ b/data_utils.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -296,11 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = 'data/hs_dynabench_eooh.xlsx' # path to EOOH annot file\n",
+    "dataset = 'dynabench'   # dataset, either 'ucb'or 'dynabench'\n",
+    "data_path = f'data/hs_{dataset}_eooh.xlsx' # path to EOOH annot file\n",
     "output_path = 'data/hs_dynabench_eooh_clean.csv' # path to save cleaned data\n",
     "# clean data\n",
     "preprocess_eooh_annots(data_path, output_path)"
