--- a/hs_detection.ipynb
+++ b/hs_detection.ipynb
@@ -30,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/opt/conda/envs/aiahs/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
     "torch.cuda.empty_cache()\n",
     "\n",
     "# create data loaders\n",
-    "dataset = 'ucb' # dataset, either 'ucb' or 'dynabench'\n",
+    "dataset = 'dynabench' # dataset, either 'ucb' or 'dynabench'\n",
     "data_path = f'data/hs_{dataset}_clean.csv' # path to data\n",
     "bsz = 128\n",
     "max_len = 256\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -173,12 +173,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 31/31 [00:11<00:00,  2.65it/s]\n",
-      "counts in test_labels: {0: 2921, 1: 1036}\n",
-      "counts in test_preds: {0: 3310, 1: 647}\n",
+      "Predicting DataLoader 0: 100%|██████████| 33/33 [00:12<00:00,  2.72it/s]\n",
+      "counts in test_labels: {0: 1852, 1: 2268}\n",
+      "counts in test_preds: {0: 1703, 1: 2417}\n",
       "confusion matrix: \n",
-      "[[2711  210]\n",
-      " [ 599  437]]\n"
+      "[[1068  784]\n",
+      " [ 635 1633]]\n"
      ]
     }
    ],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -351,19 +351,19 @@
      "output_type": "stream",
      "text": [
       "counts in labels: label\n",
-      "0    2921\n",
-      "1    1036\n",
-      "Name: count, dtype: int64 counts in preds: hate\n",
-      "0    2911\n",
-      "1    1046\n",
+      "1    2268\n",
+      "0    1852\n",
+      "Name: count, dtype: int64 counts in preds: toxicity\n",
+      "0    3411\n",
+      "1     709\n",
       "Name: count, dtype: int64\n",
-      "acc: 0.673\n",
-      "precision: 0.378\n",
-      "recall: 0.381\n",
-      "f1: 0.379\n",
+      "acc: 0.514\n",
+      "precision: 0.688\n",
+      "recall: 0.215\n",
+      "f1: 0.328\n",
       "confusion matrix: \n",
-      "[[2270  651]\n",
-      " [ 641  395]]\n"
+      "[[1631  221]\n",
+      " [1780  488]]\n"
      ]
     }
    ],
@@ -374,7 +374,10 @@
     "df_hs = df_hs[df_hs['split'] == 'test']\n",
     "\n",
     "# get labels, preds\n",
-    "labels, preds_eooh = df_hs['label'], df_hs['hate']\n",
+    "labels = df_hs['label']\n",
+    "# preds_eooh = df_hs['hate']\n",
+    "toxic_thresh = 0.5\n",
+    "preds_eooh = (df_hs['toxicity'] >= toxic_thresh).astype(int)\n",
     "# print value counts in labels, preds\n",
     "print(f\"counts in labels: {labels.value_counts()} counts in preds: {preds_eooh.value_counts()}\")\n",
     "\n",
@@ -419,14 +422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sim b/w lm preds & eooh preds: 0.690\n"
+      "sim b/w lm preds & eooh preds: 0.475\n"
      ]
     }
    ],
@@ -435,20 +438,28 @@
     "sim = np.sum(preds_lm == preds_eooh) / len(preds_lm)\n",
     "print(f\"sim b/w lm preds & eooh preds: {sim:.3f}\")\n",
     "\n",
-    "# get samples where our lm is correct but eooh is wrong\n",
+    "# get samples where our lm is correct but eooh is wrong, and vice versa\n",
     "num_samples = 20\n",
     "lm_correct_indices = (labels == preds_lm)\n",
+    "lm_wrong_indices = (labels != preds_lm)\n",
+    "eooh_correct_indices = (labels == preds_eooh)\n",
     "eooh_wrong_indices = (labels != preds_eooh)\n",
     "\n",
     "# TN for lm, FP for eooh\n",
-    "tn_condition = (labels == 0) & lm_correct_indices & eooh_wrong_indices\n",
-    "tn_samples = df_hs[tn_condition][['text']].sample(num_samples).assign(label=0, pred_lm=0, pred_eooh=1)\n",
+    "tn_lm_condition = (labels == 0) & lm_correct_indices & eooh_wrong_indices\n",
+    "tn_lm_samples = df_hs[tn_lm_condition][['text']].sample(num_samples).assign(label=0, pred_lm=0, pred_eooh=1)\n",
     "# TP for lm, FN for eooh\n",
-    "tp_condition = (labels == 1) & lm_correct_indices & eooh_wrong_indices\n",
-    "tp_samples = df_hs[tp_condition][['text']].sample(num_samples).assign(label=1, pred_lm=1, pred_eooh=0)\n",
+    "tp_lm_condition = (labels == 1) & lm_correct_indices & eooh_wrong_indices\n",
+    "tp_lm_samples = df_hs[tp_lm_condition][['text']].sample(num_samples).assign(label=1, pred_lm=1, pred_eooh=0)\n",
+    "# TN for eooh, FP for lm\n",
+    "tn_eooh_condition = (labels == 0) & lm_wrong_indices & eooh_correct_indices\n",
+    "tn_eooh_samples = df_hs[tn_eooh_condition][['text']].sample(num_samples).assign(label=0, pred_lm=1, pred_eooh=0)\n",
+    "# TP for eooh, FN for lm\n",
+    "tp_eooh_condition = (labels == 1) & lm_wrong_indices & eooh_correct_indices\n",
+    "tp_eooh_samples = df_hs[tp_eooh_condition][['text']].sample(num_samples).assign(label=1, pred_lm=0, pred_eooh=1)\n",
     "\n",
     "# concat samples into single df\n",
-    "df_disagreement_samples = pd.concat([tn_samples, tp_samples]).reset_index(drop=True)\n",
+    "df_disagreement_samples = pd.concat([tn_lm_samples, tp_lm_samples, tn_eooh_samples, tp_eooh_samples]).reset_index(drop=True)\n",
     "# save to csv\n",
     "disagreement_samples_path = f'outputs/{dataset}/disagreement_samples.tsv'\n",
     "os.makedirs(os.path.dirname(disagreement_samples_path), exist_ok=True)\n",
